<?xml version="1.0" encoding="UTF-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.mosip.esignet</groupId>
		<artifactId>esignet-parent</artifactId>
		<version>1.5.1</version>
	</parent>

	<groupId>io.mosip.esignet</groupId>
	<artifactId>esignet-service</artifactId>
	<version>1.5.1</version>
	<name>esignet-service</name>
	<description>e-Signet OIDC Service</description>

	<properties>
		<java.version>11</java.version>
		<jackson.version>2.9.5</jackson.version>
		<jackson.datatype.version>2.9.8</jackson.datatype.version>
		<fasterxml.jackson.module.jsr310.version>2.12.0</fasterxml.jackson.module.jsr310.version>
		<fasterxml.jackson.module.afterburner.version>2.12.0</fasterxml.jackson.module.afterburner.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
			<version>3.2.12</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.mosip.esignet</groupId>
			<artifactId>esignet-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.esignet</groupId>
			<artifactId>client-management-service-impl</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.esignet</groupId>
			<artifactId>oidc-service-impl</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.esignet</groupId>
			<artifactId>binding-service-impl</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.esignet</groupId>
			<artifactId>consent-service-impl</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring.boot.version}</version>
				<configuration>
					<executable>true</executable>
					<layout>ZIP</layout>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
